# csvgrep

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  csvgrep.c  debug.sh  test.sh
CMakeModules/: FindCheck.cmake
src/: CMakeLists.txt  csvgrep.c  csvparse.c  csvparse.h  error.c  error.h  expparse.c  expparse.h  stack.c  stack.h
tests/: CMakeLists.txt  test_csvgrep.c
